Add JavaFX and WebView